- removed old code from cmanager_config.php
- removed old $_POST/$_GET references from root folder.
- Updated version requirement for Moodle & cmanager version    
- formlib/preview.php types set for each field.
- additional clenaing on ajax function.php and parameters. 
- Delete icons link fixed in formbuilder.     
- Additional lang strings added.

Date July/2018
- Modified table layout / removed old <p> tags for view_summary.php
- jquery 1.7.2 updated to  3.3.1
- jquery-ui 1.8 updated to 1.12.1 / removed not needed refs
- new links to config in block settings when in edit mode to config block. Updated lang strings.

----------------------------------------------------------------------


CRM 4.3
Date: 25/May/2015
- Fixed permissions in access.php.
- Updated readme.txt with quick guide on permissions
- Changed block_cmanager to work on permissions rather than admin privs
- Deleted duplicate cmanager folder
- Updated icon set
- Display database record ID for each request rather than counter
- Course Creator and Manager roles (system) can now manage approval process
- Fix for course categories not displaying for users on page 1 of form
- Minor fixes and improvements
- Tested with 2.8 & 2.9

See Github for full log!

----------------------------------------------------------------------

CRM 4.2
Date: 5/Aug/2014
- Question marks not accepted during request process. Question marks
are now allowed.
- Editing issue during course request resolved.
- Bulk approve updated

See Github for full log!

----------------------------------------------------------------------
CRM 4.1
Date: 11/April/2014
- Enrollment keys are optional
- Safari form1.php saving issue solved.
- Various small bug fixes
----------------------------------------------------------------------

CRM Version 4.0
Date: 1/April/2014

- Updated license information
- Checked on Moodle 2.6
- Default form blank value error resolved.


----------------------------------------------------------------------
